--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: Robot Editorial Scheduler
 
 on:
   schedule:
-    # 9:00 AM UTC
-    - cron: "0 9 * * *"
-    # 3:00 PM UTC
-    - cron: "0 15 * * *"
-    # 9:00 PM UTC
-    - cron: "0 21 * * *"
+    # 9:00 AM Colombia (UTC-5 → 14:00 UTC)
+    - cron: "0 14 * * *"
+    # 3:00 PM Colombia (UTC-5 → 20:00 UTC)
+    - cron: "0 20 * * *"
+    # 9:00 PM Colombia (UTC-5 → 02:00 UTC)
+    - cron: "0 2 * * *"
   workflow_dispatch:
 
 jobs:
@@ -29,13 +29,31 @@ jobs:
 
       - name: Run robot
         env:
+          # 🔐 R2
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           R2_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: auto
+
+          # 🤖 OpenAI
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+          # 🧵 Threads
           THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
           THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
+
+          # 📰 MIX & BALANCE (IMPORTANTES)
+          RSS_FEEDS: ${{ secrets.RSS_FEEDS }}
+          MAX_PER_FEED: ${{ secrets.MAX_PER_FEED }}
+          MAX_AI_ITEMS: ${{ secrets.MAX_AI_ITEMS }}
+          THREADS_STATE_KEY: ${{ secrets.THREADS_STATE_KEY }}
+
+          # Opcionales (si no existen, usa defaults del main.py)
+          SHUFFLE_ARTICLES: "true"
+          REPOST_ENABLE: "true"
+          REPOST_MAX_TIMES: "3"
+          REPOST_WINDOW_DAYS: "7"
+
         run: |
           python main.py
