--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,11 @@ name: Robot Editorial Scheduler
 
 on:
   schedule:
-    # 9:00 AM Colombia (UTC-5 -> 14:00 UTC)
+    # 9:00 AM Colombia (UTC-5 → 14:00 UTC)
     - cron: "0 14 * * *"
-    # 3:00 PM Colombia (UTC-5 -> 20:00 UTC)
+    # 3:00 PM Colombia (UTC-5 → 20:00 UTC)
     - cron: "0 20 * * *"
-    # 9:00 PM Colombia (UTC-5 -> 02:00 UTC)
+    # 9:00 PM Colombia (UTC-5 → 02:00 UTC)
     - cron: "0 2 * * *"
   workflow_dispatch:
 
@@ -45,13 +45,12 @@ jobs:
 
           # 🤖 OpenAI
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: ${{ secrets.OPENAI_MODEL }}
 
           # 🧵 Threads
           THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
           THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
 
-          # 📸 Instagram Publishing (✅ activado)
+          # 📸 Instagram Publishing
           ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
@@ -63,7 +62,7 @@ jobs:
           MAX_AI_ITEMS: ${{ secrets.MAX_AI_ITEMS }}
           THREADS_STATE_KEY: ${{ secrets.THREADS_STATE_KEY }}
 
-          # Opcionales (si no existen, usa defaults del main.py)
+          # Opcionales
           SHUFFLE_ARTICLES: "true"
           REPOST_ENABLE: "true"
           REPOST_MAX_TIMES: "3"
@@ -76,7 +75,7 @@ jobs:
           REEL_H: "1920"
           ASSET_BG: "assets/bg.jpg"
           ASSET_LOGO: "assets/logo.png"
-          # ASSET_MUSIC: "assets/music.mp3"  # opcional si lo subes
+          # ASSET_MUSIC: "assets/music.mp3"
 
         run: |
           python -u main.py
