--- a/.github/workflows/editorial.yml
+++ b/.github/workflows/editorial.yml
@@ -2,14 +2,20 @@ name: Robot Editorial (Modo A) - Auto
 
 on:
   schedule:
-    - cron: "0 14 * * *" # 9am Colombia
-    - cron: "0 20 * * *" # 3pm Colombia
-    - cron: "0 2 * * *"  # 9pm Colombia
+    - cron: "0 14 * * *" # 9:00 AM Colombia (UTC-5 -> 14:00 UTC)
+    - cron: "0 20 * * *" # 3:00 PM Colombia (UTC-5 -> 20:00 UTC)
+    - cron: "0 2 * * *"  # 9:00 PM Colombia (UTC-5 -> 02:00 UTC)
   workflow_dispatch:
+
+concurrency:
+  group: robot-editorial-mode-a
+  cancel-in-progress: true
 
 jobs:
   run-editorial:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -18,6 +24,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -28,11 +35,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg
           ffmpeg -version
+          ffprobe -version
 
       - name: Run robot (MODE A)
         env:
           RUN_MODE: "A"
 
+          # 🔐 R2
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           R2_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -40,16 +49,20 @@ jobs:
           AWS_DEFAULT_REGION: auto
           R2_PUBLIC_BASE_URL: ${{ secrets.R2_PUBLIC_BASE_URL }}
 
+          # 🤖 OpenAI
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
+          # 🧵 Threads
           THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
           THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
 
+          # 📸 Instagram (listo para cuando Modo A publique)
           ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
           GRAPH_VERSION: "v25.0"
 
+          # 🎬 Reels assets (si Modo A los usa)
           ENABLE_REELS: "true"
           REEL_SECONDS: "15"
           REEL_W: "1080"
