--- a/.github/workflows/ugc.yml
+++ b/.github/workflows/ugc.yml
@@ -10,14 +10,9 @@ on:
     # 9:00 PM Colombia (UTC-5 → 02:00 UTC)
     - cron: "0 2 * * *"
 
-concurrency:
-  group: robot-ugc-mode-b
-  cancel-in-progress: true
-
 jobs:
   run-ugc:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
 
     steps:
       - name: Checkout repository
@@ -27,7 +22,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -56,14 +50,17 @@ jobs:
           # 🤖 OpenAI
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-          # 📸 Instagram Publishing
-          ENABLE_IG_PUBLISH: "false"
+          # 📸 Instagram Publishing (se deja true, pero DRY RUN bloquea la publicación)
+          ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
           GRAPH_VERSION: "v25.0"
 
           # ⚙️ Control diario
           MAX_POSTS_PER_DAY: "1"
+
+          # ✅ SIMULACIÓN TOTAL (NO PUBLICA)
+          UGC_DRY_RUN: "true"
 
         run: |
           python -u main.py
