--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ python-dateutil==2.9.0.post0
 fastapi==0.110.0
 uvicorn[standard]==0.27.1
 pytrends==4.9.2
+google-api-python-client
+google-auth
+google-auth-httplib2
