--- a/.github/workflows/editorial.yml
+++ b/.github/workflows/editorial.yml
@@ -1,14 +1,11 @@
-name: Robot Editorial (Modo A)
+name: Robot Editorial (Modo A) - Auto
 
 on:
-  workflow_dispatch:
   schedule:
-    # 9:00 AM Colombia (UTC-5 → 14:00 UTC)
-    - cron: "0 14 * * *"
-    # 3:00 PM Colombia (UTC-5 → 20:00 UTC)
-    - cron: "0 20 * * *"
-    # 9:00 PM Colombia (UTC-5 → 02:00 UTC)
-    - cron: "0 2 * * *"
+    - cron: "0 14 * * *" # 9am Colombia (UTC-5 => 14:00 UTC)
+    - cron: "0 20 * * *" # 3pm Colombia (UTC-5 => 20:00 UTC)
+    - cron: "0 2 * * *"  # 9pm Colombia (UTC-5 => 02:00 UTC)
+  workflow_dispatch:
 
 jobs:
   run-editorial:
@@ -25,6 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Install ffmpeg
@@ -32,17 +30,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg
           ffmpeg -version
+          ffprobe -version
 
-      - name: Run Robot (Modo A)
+      - name: Run robot (MODE A)
         env:
-          # 🔁 MODO A
           RUN_MODE: "A"
 
-          # 🧠 OpenAI
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_MODEL: "gpt-4.1-mini"
-
-          # ☁️ R2
+          # R2 / S3
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           R2_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -50,25 +44,42 @@ jobs:
           AWS_DEFAULT_REGION: auto
           R2_PUBLIC_BASE_URL: ${{ secrets.R2_PUBLIC_BASE_URL }}
 
-          # 🧵 Threads
+          # OpenAI
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_MODEL: "gpt-4.1-mini"
+
+          # Threads
           THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
           THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
           ENABLE_THREADS_PUBLISH: "true"
 
-          # 📸 Instagram
+          # Instagram (Graph API)
           ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
           GRAPH_VERSION: "v25.0"
 
-          # 🎬 Reels
+          # Reels output
           ENABLE_REELS: "true"
           REEL_SECONDS: "15"
           REEL_W: "1080"
           REEL_H: "1920"
 
-          # 🧪 SIMULACIÓN (cambiar a false cuando quieras publicar real)
-          DRY_RUN: "false"
+          # Templates (modo A visual)
+          TEMPLATE_DIR: "assets/templates"
+          LOGO_PCT_NONE: "60"
+          LOGO_PCT_SMALL: "30"
+          LOGO_PCT_BIG: "10"
+          LOGO_SMALL_SCALE: "0.35"
+          LOGO_BIG_SCALE: "0.85"
+
+          # Música NCS (best-effort)
+          ENABLE_NCS_MUSIC: "true"
+          NCS_VOLUME: "0.14"
+
+          # Default assets fallback (si no hay templates)
+          ASSET_BG: "assets/bg.jpg"
+          ASSET_LOGO: "assets/logo.png"
 
         run: |
           python -u main.py
