--- a/.github/workflows/editorial.yml
+++ b/.github/workflows/editorial.yml
@@ -1,16 +1,18 @@
 name: Robot Editorial (Modo A) - Auto
 
 on:
-  schedule:
-    - cron: "0 14 * * *" # 9am Colombia (UTC-5 => 14:00 UTC)
-    - cron: "0 20 * * *" # 3pm Colombia (UTC-5 => 20:00 UTC)
-    - cron: "0 2 * * *"  # 9pm Colombia (UTC-5 => 02:00 UTC)
   workflow_dispatch:
+  schedule:
+    # 9:00 AM Colombia (UTC-5 -> 14:00 UTC)
+    - cron: "0 14 * * *"
+    # 3:00 PM Colombia (UTC-5 -> 20:00 UTC)
+    - cron: "0 20 * * *"
+    # 9:00 PM Colombia (UTC-5 -> 02:00 UTC)
+    - cron: "0 2 * * *"
 
 jobs:
   run-editorial:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,7 +24,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Install ffmpeg
@@ -36,7 +37,7 @@ jobs:
         env:
           RUN_MODE: "A"
 
-          # R2 / S3
+          # R2
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           R2_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -48,38 +49,47 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_MODEL: "gpt-4.1-mini"
 
-          # Threads
-          THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
-          THREADS_USER_ID: ${{ secrets.THREADS_USER_ID }}
+          # Threads (si estás publicando en Threads)
           ENABLE_THREADS_PUBLISH: "true"
+          THREADS_USER_ACCESS_TOKEN: ${{ secrets.THREADS_USER_ACCESS_TOKEN }}
 
-          # Instagram (Graph API)
+          # Instagram Publishing
           ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
           GRAPH_VERSION: "v25.0"
 
-          # Reels output
+          # Reels
           ENABLE_REELS: "true"
           REEL_SECONDS: "15"
           REEL_W: "1080"
           REEL_H: "1920"
+          REEL_FPS: "30"
 
-          # Templates (modo A visual)
-          TEMPLATE_DIR: "assets/templates"
-          LOGO_PCT_NONE: "60"
-          LOGO_PCT_SMALL: "30"
-          LOGO_PCT_BIG: "10"
-          LOGO_SMALL_SCALE: "0.35"
-          LOGO_BIG_SCALE: "0.85"
-
-          # Música NCS (best-effort)
-          ENABLE_NCS_MUSIC: "true"
-          NCS_VOLUME: "0.14"
-
-          # Default assets fallback (si no hay templates)
+          # Assets
           ASSET_BG: "assets/bg.jpg"
           ASSET_LOGO: "assets/logo.png"
+          ASSET_MUSIC: "assets/music.mp3"
+
+          # Reel “gamer dynamic” tuning
+          LOGO_NONE_PCT: "60"
+          LOGO_SMALL_PCT: "30"
+          LOGO_BIG_PCT: "10"
+
+          REEL_MUSIC_ALWAYS: "true"
+          REEL_MUSIC_VOLUME: "0.15"
+
+          REEL_VOICE_PCT: "0"           # (por ahora 0, luego lo activamos)
+          REEL_VOICE_VOLUME: "1.0"
+
+          REEL_GLITCH_PCT: "60"
+          REEL_SCANLINES_PCT: "70"
+
+          # HTTP
+          HTTP_TIMEOUT: "30"
+
+          # Debug
+          DRY_RUN: "false"
 
         run: |
           python -u main.py
