--- a/.github/workflows/ugc.yml
+++ b/.github/workflows/ugc.yml
@@ -3,17 +3,16 @@ name: Robot UGC Runner (Modo B)
 on:
   workflow_dispatch:
   schedule:
-    # 9:00 AM Colombia (UTC-5 → 14:00 UTC)
+    # 9:00 AM Colombia (UTC-5 -> 14:00 UTC)
     - cron: "0 14 * * *"
-    # 3:00 PM Colombia (UTC-5 → 20:00 UTC)
+    # 3:00 PM Colombia (UTC-5 -> 20:00 UTC)
     - cron: "0 20 * * *"
-    # 9:00 PM Colombia (UTC-5 → 02:00 UTC)
+    # 9:00 PM Colombia (UTC-5 -> 02:00 UTC)
     - cron: "0 2 * * *"
 
 jobs:
   run-ugc:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -36,10 +35,9 @@ jobs:
 
       - name: Run robot (Modo B)
         env:
-          # ✅ MODO B
           RUN_MODE: "B"
 
-          # 🔐 R2
+          # R2
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           R2_ENDPOINT_URL: ${{ secrets.R2_ENDPOINT_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -47,20 +45,20 @@ jobs:
           AWS_DEFAULT_REGION: auto
           R2_PUBLIC_BASE_URL: ${{ secrets.R2_PUBLIC_BASE_URL }}
 
-          # 🤖 OpenAI
+          # OpenAI
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
-          # 📸 Instagram Publishing (se deja true, pero DRY RUN bloquea la publicación)
+          # Instagram Publishing
           ENABLE_IG_PUBLISH: "true"
           IG_ACCESS_TOKEN: ${{ secrets.IG_ACCESS_TOKEN }}
           IG_USER_ID: ${{ secrets.IG_USER_ID }}
           GRAPH_VERSION: "v25.0"
 
-          # ⚙️ Control diario
-          MAX_POSTS_PER_DAY: "99"
+          # Control diario
+          MAX_POSTS_PER_DAY: "1"
 
-          # ✅ SIMULACIÓN TOTAL (NO PUBLICA)
-          UGC_DRY_RUN: "true"
+          # Debug
+          DRY_RUN_UGC: "false"   # si tu ugc_mode_b soporta dry run, luego lo conectamos
 
         run: |
           python -u main.py
